[package]
name = "oss-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aliyun-oss-client = { version = "0.6.0", path = "../oss"}
clap = { version = "3.2.6", features = ["derive"] }
dotenv = "0.15.0"

tokio = { version = "1.19.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
reqwest = {version ="^0.11", features = ["stream"]}
futures = "^0.3"
